--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -22,7 +22,7 @@
                 <label>TECH SKILLS //</label><input class="post-text profile-box" type="text" value="<%=user.techSkills%>" name="techSkills"><br>
                 <label>BIO //</label><input class="post-text profile-box" type="text" value="<%=user.bio%>" name="bio"><br>
                 <label>AVATAR URL//</label><input class="post-text profile-box" type="text" value="<%=user.avatar%>" name="avatar"><br>
-                <div class="hr"></div>
+                <div class="hr3"></div>
                 <input id="post-button" type="submit" value="SAVE CHANGES">
             </form>
         </div>
