--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -22,7 +22,7 @@
                 <label>EMAIL //</label><div class="post-text profile-box"><%=one.email%></div>
                 <label>TECH SKILLS //</label><div class="post-text profile-box"><%=one.techSkills%></div>
                 <label>BIO //</label><div class="post-text profile-box"><%=one.bio%></div>
-                <div class="hr"></div>
+                <div class="hr3"></div>
                 <input id="post-button" type="submit" value="ADD COLLABORATOR">
             </div>
         </div>
