--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,7 +138,7 @@
 }
 #enter-post-container {
     border: 1px solid #d1f7ff;
-    width: 600px;
+    width: 650px;
 }
 .TL-divider {
     width: 150;
@@ -168,6 +168,9 @@
     padding-left: 56px;
     margin-bottom: 8px;
 }
+.link:hover {
+    text-shadow: 0px 0px 5px #d1f7ff;
+}
 .nav-link {
     margin: 10px 12px;
     color: #d1f7ff;
@@ -176,11 +179,16 @@
     text-decoration: underline;
     color: #ff2a6d;
 }
+
 .main-divider {
     /* border: 1px solid yellow; */
     width: 28%;
 }
 .hr {
+    border: 1px solid #ff2a6d;
+    width: 648px;
+}
+.hr3 {
     border: 1px solid #ff2a6d;
     width: 598px;
 }
@@ -205,7 +213,7 @@
 }
 .post-box {
     border: 1px solid #005678;
-    width: 600px;
+    width: 700px;
     margin-bottom: 12px;
 }
 .post-box:hover {
@@ -259,7 +267,7 @@
 }
 .comment-box {
     border: 1px solid #005678;
-    width: 600px;
+    width: 700px;
     margin-bottom: 12px;
 }
 .comment-box-header{
