--- a/views/timeline/index.ejs
+++ b/views/timeline/index.ejs
@@ -1,31 +1,29 @@
 <%- include('../partials/header') %>
-<div id="TL-page-layout">
-    <section id="left-TL" class="TL-divider">
+<div id="main-container">
+    <section id="left" class="main-divider">
         <div id="left-pane-title">
             <div id="page-desc">
                 // users can see other users ideas.<br>
                 // users can comment and upvote here<br>
             </div><br>
-            <div id="TL-title">
+            <div id="page-title">
                 NETWORK
             </div>
         </div>
-    </section>    
-    <section id="right-TL" class="TL-divider">   
-        <div id="timeline-Container">
+    </section>
+    <section id="center" class="main-divider">
+       
             <div id=tl-Title>
                 <h1>NETWORK</h1>
             </div>
-            <br>
             <div class="hr-timeline"></div>
-            <br>
             <div id="Community-Posts-TL">
                 <% if (post.length > 0) { %>
                     <div class="active-title">
                     </div>
                 <% post.forEach(function(post) { %>
                     <a id="community-posts" href="/posts/<%=post._id%>">    
-                        <div class="post-box2">
+                        <div class="post-box">
                             <div class="post-box-header">
                                 <div class="post-box-title">
                                     <%= post.title %>  :  <span id="title-username"><%= post.username %></span>
@@ -56,7 +54,82 @@
                 </div>
             <%};%>    
             </div>
+          
+    </section>
+    <section id="right" class="main-divider">
+        <div id="profile-container">
+            <div id="profile-title" class="right-profile">// USER PROFILE</div>
+            <div id="profile-avatar-container" class="right-profile">
+                <img class="avatar-icon" src="<%=user.avatar%>">
+            </div>
+            <div id="profile-name">
+                <div class="profile-ans">
+                    <% if (user.name) {%>
+                    <%=user.name%>
+                    <%} else {%>
+                        null
+                    <%}%>
+                </div>
+                <div class="hr-profile"></div>
+                <div class="profile-cat">NAME</div>
+            </div>
+            <br>
+            <div id="profile-username">
+                <div class="profile-ans">
+                    <% if (user.username) {%>
+                        <%=user.username%>
+                        <%} else {%>
+                            null
+                        <%}%>
+                </div>
+                <div class="hr-profile"></div>
+                <div class="profile-cat">ALIAS</div>
+            </div>
+            <br>
+            <div id="profile-email">
+                <div class="profile-ans">
+                    <% if (user.email) {%>
+                        <%=user.email%>
+                        <%} else {%>
+                            null
+                        <%}%>
+                </div>
+                <div class="hr-profile"></div>
+                <div class="profile-cat">EMAIL</div>
+            </div>
+            <br>
+            <div id="profile-skills">
+                <div class="profile-ans">
+                    <% if (user.techSkills) {%>
+                        <%=user.techSkills%>
+                        <%} else {%>
+                            null
+                        <%}%>
+                </div>
+                <div class="hr-profile"></div>
+                <div class="profile-cat">SKILLS</div>
+            </div>
+            <br>
+            <div id="profile-bio">
+                <div class="profile-ans">
+                    <% if (user.bio) {%>
+                        <%=user.bio%>
+                        <%} else {%>
+                            null
+                        <%}%>
+                </div>
+                <div class="hr-profile"></div>
+                <div class="profile-cat">BIO</div>
+            </div>
+            <br>
+            <div id="profile-edit">
+                <div class="hr" style="width: 100%; margin-top: auto;"></div>
+                <a href="/profiles/<%=user._id%>"><button id="profile-edit-button">EDIT PROFILE</button></a>
+            </div>
         </div>
     </section>
-</div>      
+</div>
+
+
+
 <%- include('../partials/footer') %>
