Add CRUD for notepad

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,6 +148,34 @@
     width: 600px;
     padding: 12px;
 }
+.notepad-content {
+    resize: none;
+    width: 675px;
+    line-height: 132%;
+    color: white;
+    background-color: transparent;
+    font-family: 'Quicksand', sans-serif;
+    border: none;
+    font-size: 16px;
+}
+.notepad-content:hover {
+    outline: 1px solid #05d9e8;
+}
+.notepad-title {
+    background-color: transparent;
+    border: none;
+    color: #05d9e8;
+    font-size: 16px;
+    font-family: 'Quicksand', sans-serif;
+    overflow: visible;
+    width: 500px;
+}
+.notepad-title:hover {
+    outline: 1px solid #05d9e8;
+}
+.post-box-title {
+    width: 500px;
+}
 .profile-box {
     border: 1px solid #005678;
 }
