--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,6 +19,7 @@
     <div id="nav-menu">
       <a class="nav-link" href="/dashboard">DASHBOARD</a>
       <a class="nav-link" href="/timeline">NETWORK</a>
+      <a class="nav-link" href="/notepad">NOTEPAD</a>
       <span class="nav-link" id="profile-toggle">PROFILE</span>
       <a class="nav-link" href="/auth/logout">LOGOUT</a>
     </div>
