--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" href="/images/favicon32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="/images/favicon96.png" sizes="96x96">
   <title>HackedIn</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script type="text/javascript" src="/js/script.js" defer></script>
 </head>
 <body>
