--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,9 @@
     </main>
-    <footer>
-    HackedIn DEVELOPED BY <br>
-    VINCE LAQUINDANUM // CHRIS LADD
+    <footer id="bottom-fade">
+    <div id="footer-tag">
+        HackedIn DEVELOPED BY <br>
+        VINCE LAQUINDANUM // CHRIS LADD
+    </div>
     </footer>
 </body>
 </html>
