--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <style>
         html {
             min-height: 100%;
-            background-image: url("../css/images/homescreen.png");
+            background-image: url("../images/homescreen.png");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: top left;
