fix profile ans box

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -200,6 +200,7 @@
     font-size: 16px;
     color: #d1f7ff;
     padding-left: 56px;
+    padding-right: 56px;
     margin-bottom: 8px;
 }
 .link:hover {
