--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -2,13 +2,19 @@
 <div id="main-container">
     <section id="left" class="main-divider">
         <div id="left-pane-title">
-            <div id="page-desc">
-                // this is where you can view <br>
-                // your posts and post new ideas<br>
-                // for people to comment on.<br>
-            </div><br>
+        <button class="hint">[ + ]</button>    
+            <br><br>
             <div id="page-title">
                 DASHBOARD
+            </div><br>
+            <div id="page-desc">
+                // this is quick view of all your public <br>
+                // postings and the activity (number <br>
+                // of comments and upvotes) of <br>
+                // those postings in one <br>
+                // glance. to view comments <br>
+                // you can click the posting <br>
+                // to view comments. <br>
             </div>
         </div>
     </section>
