apply format change to all pages

--- a/views/notepad/index.ejs
+++ b/views/notepad/index.ejs
@@ -2,12 +2,19 @@
 <div id="main-container">
     <section id="left" class="main-divider">
         <div id="left-pane-title">
-            <div id="page-desc">
-                // this is where you can create <br>
-                // private entries for new ideas<br>
-            </div><br>
+        <button class="hint">[ + ]</button>    
+            <br><br>
             <div id="page-title">
                 NOTEPAD
+            </div><br>
+            <div id="page-desc">
+                // this is where you can create and store<br>
+                // private entries for your new ideas.<br>
+                // No one has access to this content <br>
+                // so feel free to log thoughts, <br>
+                // half-baked project ideas, or <br>
+                // keep it as a journal for <br>
+                // your dev journey.
             </div>
         </div>
     </section>
