--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -2,13 +2,19 @@
 <div id="main-container">
     <section id="left" class="main-divider">
         <div id="left-pane-title">
-            <div id="page-desc">
-                // this post view is a place where you can see <br>
-                // your selected post, comments, and upvotes.<br>
-                // It also has a snapshot of your profile.<br>
-            </div><br>
+        <button class="hint">[ + ]</button>    
+            <br><br>
             <div id="page-title">
                 SELECTED
+            </div><br>
+            <div id="page-desc">
+                // this is view of the post you clicked on. <br>
+                // in this view you can see the selected <br>
+                // post, the comments on the post, and <br>
+                // the number of upvotes. Here you <br>
+                // upvote on the post or any of  <br>
+                // the comments as well as <br>
+                // post comment yourself. <br>
             </div>
         </div>
     </section>
