--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -2,13 +2,19 @@
 <div id="main-container">
     <section id="left" class="main-divider">
         <div id="left-pane-title">
-            <div id="page-desc">
-                // in this view you can edit your profile info <br>
-                // and upload a profile picture.<br>
-                // It also has a snapshot of your current profile.<br>
-            </div><br>
+        <button class="hint">[ + ]</button>    
+            <br><br>
             <div id="page-title">
                 EDIT PROFILE
+            </div><br>
+            <div id="page-desc">
+                // this is where you can edit your profile. <br>
+                // by default, this information came from <br>
+                // your github profile. You can change <br>
+                // all the information displayed, but <br>
+                // your username you can't change.<br>
+                // click save to save all your<br>
+                // changes. <br>
             </div>
         </div>
     </section>
