--- a/views/timeline/index.ejs
+++ b/views/timeline/index.ejs
@@ -2,12 +2,19 @@
 <div id="main-container">
     <section id="left" class="main-divider">
         <div id="left-pane-title">
-            <div id="page-desc">
-                // users can see other users ideas.<br>
-                // users can comment and upvote here<br>
-            </div><br>
+        <button class="hint">[ + ]</button>    
+            <br><br>
             <div id="page-title">
                 NETWORK
+            </div><br>
+            <div id="page-desc">
+                // this is quick view of all public <br>
+                // postings and the activity (number <br>
+                // of comments and upvotes) of <br>
+                // those postings in one <br>
+                // glance. to view comments <br>
+                // you can click the posting <br>
+                // to view comments. <br>
             </div>
         </div>
     </section>
