modify screen size formatting for left panel

--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -2,7 +2,7 @@
 <div id="main-container">
     <section id="left" class="main-divider">
         <div id="left-pane-title">
-        <button class="hint">[ + ]</button>    
+        <button id="hint">[ + ]</button>    
             <br><br>
             <div id="page-title">
                 VIEW PROFILE
