--- a/views/timeline/index.ejs
+++ b/views/timeline/index.ejs
@@ -2,7 +2,7 @@
 <div id="main-container">
     <section id="left" class="main-divider">
         <div id="left-pane-title">
-        <button class="hint">[ + ]</button>    
+        <button id="hint">[ + ]</button>    
             <br><br>
             <div id="page-title">
                 NETWORK
@@ -69,7 +69,9 @@
                 </div>
             <%};%>    
             </div>
-          
+        <div id="space">
+            END
+        </div>  
     </section>
     <section id="right" class="main-divider">
         <%- include('../partials/profile') %>
