--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,6 +54,7 @@
     letter-spacing: 6px;
     margin-left: 24px;
     margin-right: 16px;
+    display: none;
 }
 #TL-title {
     color: #05d9e8;
@@ -69,6 +70,7 @@
     text-align: right;
     margin-left: 24px;
     margin-right: 16px;
+    display: none;
 }
 #right-TL {
     position: relative; 
@@ -115,6 +117,7 @@
     font-size: 28px;
     letter-spacing: 1px;
     margin-bottom: 24px;
+    display: none;
 }
 #profile-avatar-container {
     /* border: 1px solid white; */
@@ -159,11 +162,16 @@
     width: 648px;
     padding: 12px;
 }
-.hint {
+#hint {
     background-color: #01012b;
     border: none;
     color: #05d9e8;
     margin-left: 24px;
+    cursor: pointer;
+    font-size: 18px;
+}
+#hint:hover {
+    text-shadow: 0px 0px 2px #d1f7ff;
 }
 .notepad-content {
     resize: none;
@@ -378,7 +386,7 @@
 #top-fade {
 	z-index: 99;
 	position: fixed;
-	height: 100px;
+	height: 25px;
     width: 98%;
     top: 70px;
 	background-image: url("/images/fade-top.png");
@@ -413,16 +421,103 @@ label {
     color: white;
     opacity: .6; /* Firefox */
 }
-@media only screen 
-      and (min-device-width: 900px) 
-      and (max-device-width: 1675px) {
-        #page-title {
-            font-size: 32px;
-        }
-        #page-desc {
-            font-size: 12px;
-            letter-spacing: 0px;
+#space {
+    margin: 100px 0px;
 
-        }
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
+/* Styles */
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen
+and (min-width : 321px) {
+/* Styles */
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen
+and (max-width : 320px) {
+/* Styles */
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px) {
+/* Styles */
+}
+
+/* iPads (landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : landscape) {
+/* Styles */
+}
+
+/* iPads (portrait) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : portrait) {
+/* Styles */
+}
+
+/* Smaller Desktops and laptops ----------- */
+@media only screen
+and (max-width : 1400px) {
+    #page-title {
+        font-size: 24px;
+    }
+    #page-desc {
+        font-size: 6px;
+        letter-spacing: 0px;
 
     }
+}
+
+/* Smaller Desktops and laptops ----------- */
+@media only screen
+and (max-width : 1500px)
+and (min-width : 1401px) {
+    #page-title {
+        font-size: 32px;
+    }
+    #page-desc {
+        font-size: 8px;
+        letter-spacing: 0px;
+
+    }
+}
+
+/* Desktops and laptops ----------- */
+@media only screen
+and (max-width : 1600px)
+and (min-width : 1501px) {
+    #page-title {
+        font-size: 42px;
+    }
+    #page-desc {
+        font-size: 10px;
+        letter-spacing: 4px;
+
+    }
+}
+
+/* Large screens ----------- */
+@media only screen
+and (max-width : 1824px) {
+/* Styles */
+}
+
+/* iPhone 4 ----------- */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+/* Styles */
+}
