Fix some formatting sizing issues

--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -75,7 +75,10 @@
     <div class="active-title">
         NO POSTS YET
     </div>
-<%};%>    
+<%};%>
+<div id="space">
+    END
+</div>     
     </section>
     <section id="right" class="main-divider">
         <%- include('../partials/profile') %>
