--- a/views/notepad/index.ejs
+++ b/views/notepad/index.ejs
@@ -77,6 +77,9 @@
         NO ENTRIES YET
     </div>
 <%};%>    
+<div id="space">
+    END
+</div> 
     </section>
     <section id="right" class="main-divider">
         <%- include('../partials/profile') %>
