--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -35,6 +35,9 @@
             </form>
         </div>
         <div class="active-title">
+            <div id="space">
+                END
+            </div> 
     </section>
     <section id="right" class="main-divider">
         <%- include('../partials/profile') %>
