--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -34,6 +34,9 @@
         </div>
         <div class="active-title">
     </section>
+    <div id="space">
+        END
+    </div> 
     <section id="right" class="main-divider">
         <%- include('../partials/profile') %>
     </section>
