--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -91,6 +91,9 @@
             </div>
         </div>
     <% }) %>
+    <div id="space">
+        END
+    </div> 
     </section>
     <section id="right" class="main-divider">
         <%- include('../partials/profile') %>
